# vulcan-sql

./: .eslintrc.json  .gitignore  LICENSE  LICENSE.md  README.md  codecov.yml  jest.preset.ts  jest.setup.ts  migrations.json  nx.json  package.json  tsconfig.base.json  workspace.json
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
cli/: Dockerfile  index.js  package.json  pkg.config.json
examples/covid19-global-data-api/: .gitignore  README.md  package-lock.json  package.json  result.json  vulcan.yaml
examples/covid19-global-data-api/sqls/: countries.sql  countries.yaml  max_cases.sql  max_cases.yaml  max_deaths.sql  max_deaths.yaml  min_cases.sql  min_cases.yaml  min_deaths.sql  min_deaths.yaml  reports.sql  reports.yaml  who_regions.sql  who_regions.yaml
examples/covid19-global-data-api/visualizations/streamlit/: README.md  main.py  pyproject.toml
labs/playground1/: .gitignore  Makefile  README.md  package.json  profile.yaml  vulcan.yaml
labs/playground1/examples/use-canner-pat-authenticator/: vulcan.yaml
labs/playground1/mdls/: default.mdl
labs/playground1/outputs/api-configs/: profile.yaml  vulcan.yaml
labs/playground1/playground-exts/: index.js  mockDb.js  package.json
labs/playground1/sqls/: simple1.sql  simple1.yaml  tpch.sql  tpch.yaml
labs/playground1/test-data/: .gitignore  getdata.js
tools/scripts/: buildDocker.mjs  publish.mjs  publishDocker.mjs  replaceAlias.ts  version.mjs
types/: apache-md5.d.ts  dockerode-compose.d.ts  duckdb.d.ts  nunjucks.d.ts
(+8 files in other folders)
